# language-learning-website

./: README.md  activities.html  index.html  phrases.html  pyproject.toml  resources.html
css/: activities.css  phrases.css  resources.css  styles.css
js/: script.js
