[project]
name = "language-learning-website"
version = "0.1.0"
description = "A language learning website project"
authors = [
    {name = "Veni Tzin"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
